clean arquitecture base
-mongo db access
-web ui

--- a/ProductsSearch.Web/Components/ProductListItem.razor
+++ b/ProductsSearch.Web/Components/ProductListItem.razor
@@ -1,6 +1,4 @@
-﻿@using ProductsSearch.Core.Entities
-
-<div class="card" style="width: 18rem;">
+﻿<div class="card" style="width: 18rem;">
     <img src="@Product.ImageUrl" class="card-img-top">
     <div class="card-body">
         <h5 class="card-title">@Product.Brand</h5>
