--- a/ProductsSearch.Web/Shared/MainLayout.razor
+++ b/ProductsSearch.Web/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <Products_Search.Components.ProductsSearchBar/>
+        <ProductsSearchBar/>
     </div>
 
     <div class="content px-4">
