--- a/ProductsSearch.Web/_Imports.razor
+++ b/ProductsSearch.Web/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.JSInterop
 @using ProductsSearch.Web
 @using ProductsSearch.Web.Shared
-@using ProductsSearch.Core.Entities
+@using ProductsSearch.Web.Models
+@using ProductsSearch.Web.Services
