--- a/ProductsSearch.Web/Components/ProductListItem.razor
+++ b/ProductsSearch.Web/Components/ProductListItem.razor
@@ -1,5 +1,7 @@
 ﻿<div class="card" style="width: 18rem;">
-    <img src="@Product.ImageUrl" class="card-img-top">
+    <svg class="svg" >
+        <image href="http://@Product.ImageUrl" alt="Product Image" class="image"/>
+    </svg>
     <div class="card-body">
         <h5 class="card-title">@Product.Brand</h5>
         <p class="card-text">@Product.Description</p>
