--- a/ProductsSearch.Web/Pages/Products.razor
+++ b/ProductsSearch.Web/Pages/Products.razor
@@ -1,5 +1,5 @@
 ﻿@page "/products"
-@page "/products/{SearchTerm}"
+@page "/products/{searchTerm}"
 
 @using ProductsSearch.Web.Services
 @using ProductsSearch.Web.Components
