--- a/ProductsSearch.Web/wwwroot/css/site.css
+++ b/ProductsSearch.Web/wwwroot/css/site.css
@@ -28,6 +28,9 @@ html, body {
 .card {
     align-items: center;
 }
+    .card-text {
+        margin-top: -5px;
+    }
 
 .searchTerm {
     width: 100%;
@@ -54,6 +57,20 @@ html, body {
     border-radius: 0 15px 15px 0;
     cursor: pointer;
     font-size: 20px;
+}
+
+.product-price{
+    font-size: 1.4rem;
+    line-height: 1.2rem;
+    color: #ce181a;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.product-price-crossedout {
+    opacity: 0.7;
+    margin-right: 5px;
+    margin-bottom: 10px;
 }
 
 a, .btn-link {
