--- a/ProductsSearch.Web/_Imports.razor
+++ b/ProductsSearch.Web/_Imports.razor
@@ -9,3 +9,6 @@
 @using ProductsSearch.Web.Shared
 @using ProductsSearch.Web.Models
 @using ProductsSearch.Web.Services
+@using ProductsSearch.Web.Components
+@using ProductsSearch.Common.ViewModels
+@using ProductsSearch.Core.Models
