--- a/ProductsSearch.Web/wwwroot/css/site.css
+++ b/ProductsSearch.Web/wwwroot/css/site.css
@@ -28,9 +28,15 @@ html, body {
 .card {
     align-items: center;
 }
-    .card-text {
-        margin-top: -5px;
-    }
+
+.card-body {
+    align-items: center;
+}
+
+.card-text {
+    margin-top: -5px;
+    margin-bottom: 10px;
+}
 
 .searchTerm {
     width: 100%;
@@ -79,6 +85,7 @@ html, body {
     color: gray;
     font-weight: lighter;
     margin-bottom: 10px;
+    display: block;
 }
 
 a, .btn-link {
